# plateau

./: .gitrepo  Cargo.toml  Dockerfile  Dockerfile.plateau  LICENSE-APACHE  LICENSE-MIT  MIGRATION.md  Makefile  README.md  README.md.subrepo  justfile  release.toml  sccache.mk  setup-sccache.sh
.github/workflows/: rust.yml
arrow-rs/client/: Cargo.toml
arrow-rs/client/src/: batch.rs  lib.rs  replicate.rs
arrow-rs/data/: Cargo.toml
arrow-rs/data/src/: chunk.rs  compatible.rs  index.rs  lib.rs  limit.rs  records.rs  segment.rs
arrow-rs/data/src/segment/: arrow.rs  cache.rs  parquet.rs
arrow-rs/test/: Cargo.toml
arrow-rs/test/src/: http.rs  lib.rs
arrow-rs/transport/: Cargo.toml
arrow-rs/transport/src/: lib.rs
bench/: Cargo.toml
bench/src/: lib.rs  load.rs  main.rs  status.rs
catalog/: Cargo.toml
catalog/migrations/: 20240214203753_segments.down.sql  20240216215440_version.up.sql
catalog/src/: catalog.rs  lib.rs  manifest.rs  partition.rs  slog.rs  storage.rs  topic.rs
cli/: Cargo.toml
cli/src/: display.rs  main.rs
client/: Cargo.toml
client/src/: batch.rs  lib.rs  replicate.rs
data/: Cargo.toml
data/src/: chunk.rs  compatible.rs  index.rs  lib.rs  limit.rs  records.rs  segment.rs
data/src/segment/: arrow.rs  parquet.rs
examples/: records.json  serde.rs
plateau/: Cargo.toml  build.rs
plateau/src/: main.rs
prompts/: arrow-rs-plan.md  execute.md
server/: Cargo.toml  build.rs  topic.sh
server/bench/: Cargo.toml
server/bench/samples/: ccfraud.arrow  list-ccfraud.arrow
server/bench/src/: load.rs  main.rs  read.rs  write.rs
server/migrations/: 20240214203753_segments.up.sql  20240216215440_version.down.sql
server/src/: catalog.rs  chunk.rs  compatible.rs  config.rs  http.rs  lib.rs  limit.rs  main.rs  manifest.rs  metrics.rs  partition.rs  replication.rs  retention.rs  segment.rs  slog.rs  storage.rs  test.rs  topic.rs
server/src/axum_util/: mod.rs  query.rs  response.rs
server/src/http/: chunk.rs  error.rs
server/src/segment/: arrow.rs  cache.rs  parquet.rs  test.rs
server/tests/: server.rs
server/tests/data/: timed.arrow  v1.parquet
src/: catalog.rs  chunk.rs  http.rs  lib.rs  limit.rs  main.rs  manifest.rs  partition.rs  segment.rs  slog.rs  topic.rs
src/http/: chunk.rs  error.rs
test/: Cargo.toml
test/src/: http.rs  lib.rs  server.rs
tests/: server.rs
transport/: Cargo.toml
transport/src/: lib.rs  test.rs
