[workspace]
resolver = "2"
members = ["client", "server", "transport", "cli", "bench", "plateau", "test"]


[workspace.package]
version = "0.3.2"
edition = "2021"
authors = ["Wallaroo Labs"]
repository = "https://github.com/WallarooLabs/plateau"
license = "MIT OR Apache-2.0"


[workspace.dependencies]
plateau-cli = { path = "./cli" }
plateau-client = { path = "./client" }
plateau-server = { path = "./server" }
plateau-test = { path = "./test" }
plateau-transport = { path = "./transport" }
plateau = { path = "./plateau" }


[profile.bench]
debug = true


[patch.crates-io]
arrow2 = { git = "https://github.com/WallarooLabs/arrow2", branch = "fmurphy/match-polars" }
parquet2 = { git = "https://github.com/WallarooLabs/parquet2", branch = "more-writer-details" }


[workspace.lints.clippy]
use_self = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"
large_futures = "warn"


[workspace.lints.rust]
deprecated_in_future = "warn"
future_incompatible = "warn"
# non_exhaustive_omitted_patterns = "warn"
noop_method_call = "warn"
# unreachable_pub = "warn"
missing_debug_implementations = "warn"
rust_2018_compatibility = "warn"
rust_2021_compatibility = "warn"
rust_2024_compatibility = "warn"
rust_2018_idioms = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused = "warn"
# unused_crate_dependencies = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
# warnings = "deny"
