[workspace]
resolver = "2"
members = [
  "catalog",
  "client",
  "data",
  "server",
  "transport",
  "cli",
  "bench",
  "plateau",
  "test",
  "arrow-rs/transport",
  "arrow-rs/client",
  "arrow-rs/test",
  "arrow-rs/data"
]


[workspace.package]
version = "0.5.5"
edition = "2021"
authors = ["Wallaroo Labs"]
repository = "https://github.com/WallarooLabs/plateau"
license = "MIT OR Apache-2.0"


[workspace.dependencies]

chrono = "0.4"
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "rustls-tls",
  "stream",
  "trust-dns",
] }
test-log = { version = "0.2", default-features = false, features = ["trace"] }
thiserror = "2.0"
tracing = "0.1"

plateau-catalog = { path = "./catalog" }
plateau-cli = { path = "./cli" }
plateau-client = { path = "./client" }
plateau-data = { path = "./data" }
plateau-server = { path = "./server" }
plateau-test = { path = "./test" }
plateau-transport = { path = "./transport" }
plateau = { path = "./plateau" }


[profile.bench]
debug = true


[patch.crates-io]
arrow2 = { git = "https://github.com/WallarooLabs/arrow2", branch = "fmurphy/bugfix-records-parsing" }
parquet2 = { git = "https://github.com/WallarooLabs/parquet2", branch = "more-writer-details" }


[workspace.lints.clippy]
use_self = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"
large_futures = "warn"


[workspace.lints.rust]
future_incompatible = { level = "warn", priority = -1 }
rust_2018_compatibility = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }
# rust_2024_compatibility = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
unused = { level = "warn", priority = -1 }
deprecated_in_future = "warn"
# non_exhaustive_omitted_patterns = "warn"
noop_method_call = "warn"
# unreachable_pub = "warn"
missing_debug_implementations = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
# unused_crate_dependencies = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
# warnings = "deny"
