[package]
name = "bench"

version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true


[dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
humantime-serde = "1"

sample-std = "0.2.1"
sample-arrow2 = "0.17.2"

futures = "0.3"
hdrhistogram = "7.5"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

reqwest.workspace = true

plateau-server.workspace = true
plateau-client = { workspace = true, features = ["health"] }


[[bin]]
name = "cv"
