[package]
name = "plateau-cli"
authors = ["Wallaroo Labs"]
version = "0.1.0"
edition = "2021"

[dependencies]
plateau-transport = { path = "../transport", features = ["structopt-cli"] }
plateau-client = { path = "../client" }
polars = { version = "0.32", features = ["ipc", "dtype-full"], optional = true }
structopt = "0.3"
url = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
anyhow = "1"
futures = "0.3"

[features]
polars = ["dep:polars", "plateau-client/polars"]
