[package]
name = "plateau-cli"
authors = ["Wallaroo Labs"]
version = "0.2.3"
edition = "2021"


[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
polars = { version = "0.36.2", features = [
  "ipc",
  "dtype-full",
], optional = true }
url = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

plateau-transport = { path = "../transport", features = ["clap"] }
plateau-client = { path = "../client" }


[features]
default = ["polars"]
polars = ["dep:polars", "plateau-client/polars"]


[lints]
workspace = true
