[package]
name = "plateau-cli"
description = "plateau CLI interface"

version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true


[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
polars = { version = "0.36.2", features = [
  "ipc",
  "dtype-full",
], optional = true }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
url = "2.5"

plateau-transport = { path = "../transport", features = ["clap"] }
plateau-client = { path = "../client" }


[features]
default = ["polars"]
polars = ["dep:polars", "plateau-client/polars"]


[lints]
workspace = true
