[package]
name = "plateau-client"
authors = ["Wallaroo Labs"]
version = "0.1.0"
edition = "2021"


[dependencies]
backoff = { version = "0.4", features = ["tokio"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
plateau-transport = { path = "../transport" }
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "rustls-tls",
  "stream",
  "trust-dns",
] }
url = "2"
thiserror = "1"
serde = "1"
serde_json = "1"
serde_qs = "0.12"
tracing = "0.1"
futures = "0.3"
bytes = "1"
async-trait = "0.1"
lazy_static = "1.4"
polars = { version = "0.36.2", optional = true, features = [
  "ipc",
  "dtype-full",
] }


[dev-dependencies]
anyhow = "1"
parking_lot = "0.11"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
httptest = "0.15"
serde_json = "1"
plateau = { path = "../server" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


[features]
batch = ["dep:tokio"]
health = ["dep:tokio"]
polars = ["dep:polars"]
replicate = ["dep:backoff", "dep:tokio"]
rweb = ["plateau-transport/rweb"]


[lints]
workspace = true
