[package]
name = "plateau-client"

version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true


[dependencies]
backoff = { version = "0.4", features = ["tokio"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "rustls-tls",
  "stream",
  "trust-dns",
] }
url = "2"
thiserror = "1"
serde = "1"
serde_json = "1"
serde_qs = "0.12"
tracing = "0.1"
futures = "0.3"
bytes = "1"
async-trait = "0.1"
polars = { version = "0.36.2", optional = true, features = [
  "ipc",
  "dtype-full",
] }

plateau-transport.workspace = true


[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
httptest = "0.15"
serde_json = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

plateau-server.workspace = true
plateau-test.workspace = true


[features]
batch = ["dep:tokio"]
health = ["dep:tokio"]
polars = ["dep:polars"]
replicate = ["dep:backoff", "dep:tokio"]
rweb = ["plateau-transport/rweb"]


[lints]
workspace = true
