[package]
name = "plateau-data"
description = "Data processing for the plateau server"

version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true


[dependencies]
anyhow = "1"
bytes = "1.6"
bytesize = { version = "1.1.0", features = ["serde"] }
chrono = "0.4"
config = "0.14"
futures = "0.3"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
parquet2 = { version = "0.17", default-features = false }
parquet-format-safe = "0.2"
humantime-serde = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.7"
tracing = "0.1"
tokio-stream = { version = "0.1", features = ["signal"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4", features = ["trace"] }
systemstat = "0.2"

thiserror.workspace = true

plateau-client.workspace = true
plateau-transport.workspace = true


[dev-dependencies]
itertools = "0.13"
tempfile = "3"
test-log = { version = "0.2", default-features = false, features = ["trace"] }
uuid = { version = "1.10", features = ["v4"] }

sample-test = "0.2.1"
sample-std = "0.2.1"
sample-arrow2 = "0.17.2"

reqwest.workspace = true

plateau-client.workspace = true
plateau-test.workspace = true


[lints]
workspace = true
