[package]
name = "plateau-server"
description = "A low-profile event and log aggregator"

version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true


[dependencies]
anyhow = "1"
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
bytesize = { version = "1.1.0", features = ["serde"] }
config = "0.14"
futures = "0.3"
itertools = "0.12"
metrics = "0.22"
metrics-exporter-prometheus = "0.14"
thiserror = "1"
parquet2 = { version = "0.17", default-features = false }
parquet-format-safe = "0.2"
bytes = "1"
humantime-serde = "1"
serde_json = "1"
serde_qs = { version = "0.12" }
serde = { version = "1", features = ["derive"] }
tempfile = "3"
toml = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = { version = "0.1", features = ["signal"] }
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
# TODO: 0.7.4 adds a deprecation warning that will need to be fixed down the road
sqlx = { version = "=0.7.3", features = [
  "chrono",
  "sqlite",
  "runtime-tokio-rustls",
] }
systemstat = "0.2"
rand = "0.8"
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
uuid = "1.4"
regex = "1.10"

plateau-client = { workspace = true, features = ["replicate"] }
plateau-transport.workspace = true


[dev-dependencies]
ctor = "0.2"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
test-log = { version = "0.2", default-features = false, features = ["trace"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }

sample-test = "0.2.1"
sample-std = "0.2.1"
sample-arrow2 = "0.17.2"

plateau-client.workspace = true
plateau-test.workspace = true


[lints]
workspace = true
