[package]
name = "plateau-transport"
authors = ["Wallaroo Labs"]
version = "0.1.0"
edition = "2021"
rust-version = "1.60"

[dependencies]
serde = "1"
rweb = "0.15"
structopt = { version = "0.3", optional = true }
arrow2 = { git = "https://github.com/WallarooLabs/arrow2", branch = "wallaroo/main-2022-q4", features = [
    "compute_aggregate",
    "compute_cast",
    "compute_comparison",
    "compute_concatenate",
    "compute_filter",
    "io_parquet",
    "io_ipc",
    "io_ipc_read_async",
    "io_json",
    "io_flight",
] }
chrono = "0.4"
thiserror = "1"

[features]
structopt-cli = ["dep:structopt"]
