[package]
name = "plateau-test-arrow-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true


[dependencies]
anyhow = "1.0"
tempfile = "3"
tokio = "1.38"

chrono.workspace = true

plateau-client-arrow-rs = { path = "../client" }
plateau-server.workspace = true
plateau-transport-arrow-rs = { path = "../transport" }


[lints]
workspace = true
