[package]
name = "bench"
authors = ["Wallaroo Labs"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
futures = "0.3"
hdrhistogram = "7.5"
log = "0.4"
pretty_env_logger = "0.4"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
