[package]
name = "bench"
authors = ["Wallaroo Labs"]
version = "0.1.0"
edition = "2021"


[dependencies]
async-trait = "0.1"
futures = "0.3"
hdrhistogram = "7.5"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
